# fotobox

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  DockerfileJessie  DockerfileStretch  Doxyfile  LICENSE  README.md  THANKS  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  buzzer.cpp  buzzer.h  buzzer_8cpp.html  buzzer_8cpp__incl.map  buzzer_8cpp__incl.md5  buzzer_8cpp_source.html  buzzer_8h.html  buzzer_8h__dep__incl.map  buzzer_8h__dep__incl.md5  buzzer_8h__incl.map  buzzer_8h__incl.md5  buzzer_8h_source.html  camera.cpp  camera.cpp.rej  camera.h  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8cpp_source.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  (+508 more)
cmake/: FindWiringPi.cmake  Findpigpio.cmake
forms/: commandlineoptions.ui  fotobox.ui  preferences.ui
i18n/: qresource.qrc  translation_de.qm  translation_de.ts  translation_en.qm  translation_en.ts
include/: buzzer.h  camera.h  countdown.h  fotobox.h  preferenceprovider.h  preferences.h
other/: DockerfileBullseye  DockerfileBullseye32bit  DockerfileBullseye64bit  DockerfileBuster  DockerfileBuster32bit  DockerfileBuster64bit  DockerfileStretch  DockerfileStretch32bit  Doxyfile  Info.plist  install_dependencies.sh  raspbian_install.sh
resources/: DockerfileJessie  DockerfileStretch  Doxyfile  Info.plist  qresource.qrc  translation_de.qm  translation_de.ts  translation_en.qm  translation_en.ts
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  (+32 more)
source/: buzzer.cpp  camera.cpp  countdown.cpp  fotobox.cpp  fotoboxmac.mm  main.cpp  preferenceprovider.cpp  preferences.cpp
src/: buzzer.cpp  buzzer.h  camera.cpp  camera.h  countdown.cpp  countdown.h  fotobox.cpp  fotobox.h  fotoboxmac.mm  main.cpp  preferenceprovider.cpp  preferenceprovider.h  preferences.cpp  preferences.h
